@@ -47,9 +47,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
 		<!-- SONAR -->
+		<sonar.exclusions>src/main/java/fr/insee/rmes/queries/**/*,
+			src/main/java/fr/insee/rmes/modeles/**/*</sonar.exclusions>
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.language>java</sonar.language>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+        <version.maven-jacoco>0.8.5</version.maven-jacoco>
+		<version.maven-sonar>3.7.0.1746</version.maven-sonar>
+		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
 		
 	</properties>
 
@@ -501,17 +510,15 @@
 			</plugin>
 			
 			<plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.7.0.1746</version>
-            </plugin>
+			    <groupId>org.sonarsource.scanner.maven</groupId>
+			    <artifactId>sonar-maven-plugin</artifactId>
+			</plugin>
 			
 
 			<!-- Plugin pour prise en compte des tests sur SonarQube plate-forme innovation -->
 			<plugin>
-				<groupId>org.jacoco</groupId>
+			    <groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.6</version>
 				<executions>
 					<execution>
 						<goals>
@@ -522,12 +529,81 @@
 						<id>jacoco-site</id>
 						<phase>test</phase>
 						<goals>
-							<goal>report</goal>
+				    		<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>	
 		</plugins>
+		<pluginManagement>
+			<plugins>
+
+				<!-- Pour l'exécution des tests unitaires -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<!-- https://carlobertoldi.wordpress.com/2012/03/12/maven-unit-tests-and-those-funny-characters/ -->
+				<configuration>
+       				 <junitArtifactName>junit:junit</junitArtifactName>
+        			<encoding>UTF-8</encoding>
+       				 <inputEncoding>UTF-8</inputEncoding>
+        			<outputEncoding>UTF-8</outputEncoding>
+					<!-- permet la surcharge de maven-surefire-plugin tout en fonctionnant avec jacoco -->
+					<!-- <argLine>${argLine}</argLine>	MAVEN surcharge with properties	 -->
+    			</configuration>
+
+				<executions>
+					<execution>
+						<id>test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<skip>false</skip>
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
+							<encoding>UTF-8</encoding>
+						</configuration>
+
+					</execution>
+				</executions>
+			</plugin>
+				
+				
+				<plugin>
+                	<groupId>org.sonarsource.scanner.maven</groupId>
+                	<artifactId>sonar-maven-plugin</artifactId>
+                	<version>${version.maven-sonar}</version>
+            	</plugin>
+				
+	
+				<!-- Plugin pour prise en compte des tests sur SonarQube plate-forme innovation -->
+				<plugin>
+					<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${version.maven-jacoco}</version>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<phase>report</phase>
+								<goals>
+									<goal>report-aggregate</goal>
+								</goals>
+							</execution>
+						</executions>
+				</plugin>
+				
+			</plugins>
+		 </pluginManagement>
 	</build>
 
 </project>
